--- a/gallery.html
+++ b/gallery.html
@@ -4,41 +4,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1">
         <title>My love for Bernie</title>
-        <link rel="stylesheet" href="website.css">
+        <link rel="stylesheet" type="text/css" href="website.css">
+
     </head>
     <body>
-        <div class="imgpreview">
-            <div>
-                <img class=photo src="New folder/IMG_3575.JPG" alt="Our first photo together" title="Our first photo"> 
-            </div>
-           <div>
-                <p class="imgdesc"> Pre-dating: First Photo Together </p> 
-           </div>
+        <h1 class="home"><a href="index.html"><button class="gallery-button"> HOME </button></a> </h1>
+        <div class="intro">
+            <h2>Gallery</h2>
+        </div>
             
-        </div>
-        <div class="imgpreview">
-            <img class=photo src="New folder/IMG_3625.JPG">
-            <p class="imgdesc"> Pre dating: First Date Party Together  </p> 
-        </div>
+        </div id="image-gallery">
+            <img id="current-image" src="images/image1.JPG" alt="Image 1">
+                <div id="image-thumbs">
+                    <script src="script.js"></script>
+                </div>
+        </div>       
 
-        <div class="imgpreview">
-            <img class=photo src="New folder/IMG_3780.JPG">
-            <p class="imgdesc"> 1 month: First Beach Trip </p> 
-        </div>
-
-        <div class="imgpreview">
-            <img class=photo src="New folder/IMG_6057.JPG"> 
-            <img class=photo src="New folder/IMG_6099.JPG">
-            <p class="imgdesc"> 2 months: The Great Mosquito Ambush </p> 
-        </div>
-        
-        <div class="imgpreview">
-            <img class=photo src="New folder/IMG_4296.JPG">
-            <p class="imgdesc"> 3 months: Hottie in the Brewery </p> 
-        </div>
-
-        <div class="imgpreview">
-            <img class=photo src="New folder/IMG_8935.JPG">
-            <p class="imgdesc">  6 months: DC with Dookie </p> 
-        </div>
     </body>
