--- a/statement.html
+++ b/statement.html
@@ -10,10 +10,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
+        <h1 class="home"><a href="index.html"><button class="gallery-button"> HOME </button></a> </h1>
         <p class="statement-lines">
             In the state of <i>Virginia</i>, I, <i>Justin Meeks</i>, of legal age, presently residing at 
             EY, and acting in official capacity, do state that if lucky enough, will take 
-            Bernedette Williams out to Nobu for her 22nd birthday. 
+            Bernedette Williams out to Nobu for our one year anniversary. 
         </p>
         <p class="pre-sign">
             Signed ~ 
