--- a/vesting.html
+++ b/vesting.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="website.css">
     </head>
     <body>
+        <h1 class="home"><a href="index.html"><button class="gallery-button"> HOME </button></a> </h1>
         <table border="10" cellpadding="10" cellspacing="10">
             <tr>
                 <th rowspan =6>Vesting Period</th>
@@ -45,6 +46,6 @@
             </tr>
         </table>
         <p>
-            <strong>DISCLAIMER</strong> ringpops my come in different flavors
+            <strong>DISCLAIMER</strong> ringpops may come in different flavors
         </p>
     </body>
