--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1">
-        <title>My love for Bernie</title>
+        <title>Love You</title>
         <link rel="stylesheet" type="text/css" href="website.css">
 
     </head>
@@ -14,7 +14,7 @@
         </div>
             
         </div id="image-gallery">
-            <img id="current-image" src="images/image1.JPG" alt="Image 1">
+            <img id="current-image" src="image1.JPG" alt="Image 1">
                 <div id="image-thumbs">
                     <script src="script.js"></script>
                 </div>
