--- a/present2.html
+++ b/present2.html
@@ -8,9 +8,10 @@
     </head>
     <body>
         <h1 class="home"><a href="index.html"><button class="gallery-button"> HOME </button></a> </h1>
-        <h2>CLICK COUPON TO REDEEM</h2>
-        <div class="imgpreview">
-            <a href="present2.html"><img class=coupon src="coupon.png"></a>
+        <div>
+            <h1 id="choice-header"> OR... Would you rather go to Kings Dominion???</h1>
         </div>
-    </body>
-
+        <div class="choice-buttons">
+            <a href="present3.html"><button id="choice-yes">Yes</button></a>
+            <button id="choice-no">No</button>
+        </div>
