--- a/present3.html
+++ b/present3.html
@@ -8,9 +8,5 @@
     </head>
     <body>
         <h1 class="home"><a href="index.html"><button class="gallery-button"> HOME </button></a> </h1>
-        <h2>CLICK COUPON TO REDEEM</h2>
-        <div class="imgpreview">
-            <a href="present2.html"><img class=coupon src="coupon.png"></a>
-        </div>
+        <h1>Sweet! getting tickets now!</h1>
     </body>
-
