--- a/vesting.html
+++ b/vesting.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1">
-        <title>My love for Bernie</title>
+        <title>Love You</title>
         <link rel="stylesheet" href="website.css">
     </head>
     <body>
